--- a/tienda/templates/tienda/productos_lista.html
+++ b/tienda/templates/tienda/productos_lista.html
@@ -1,11 +1,37 @@
-{extends 'tienda/base.html'}
-{block contenido}
-    <h1>Listado de Productos</h1>
-    <ul>
-        {% for producto in productos %}
-            <li>{{ producto.nombre }} - {{ producto.precio }} €</li>
-        {% empty %}
-            <li>No hay productos disponibles.</li>
-        {% endfor %}
-    </ul>
-{endblock}
+{% extends 'tienda/base.html' %}
+{% block contenido %}
+    <h1 class="mb-4">Lista de Productos</h1>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Marca</th>
+                <th>Precio</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for producto in productos %}
+            <tr>
+                <td>{{ producto.nombre }}</td>
+                <td>{{ producto.marca }}</td>
+                <td>{{ producto.precio }}</td>
+                <td>
+                    <a href="{% url 'producto_detalle' producto.pk %}" class="btn btn-info btn-sm">Ver Detalles</a>
+                    {% if user.is_staff %}
+                    <a href="{% url 'producto_editar' producto.pk %}" class="btn btn-warning btn-sm">Editar</a>
+                    <a href="{% url 'producto_eliminar' producto.pk %}" class="btn btn-danger btn-sm">Eliminar</a>
+                    {% endif %}
+                </td>
+            </tr>
+            {% empty %}
+            <tr>
+                <td colspan="5">No hay productos disponibles.</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    {% if user.is_staff %}
+    <a href="{% url 'producto_nuevo' %}" class="btn btn-primary">Crear Nuevo Producto</a>
+    {% endif %}
+{% endblock %}
