--- a/tienda/templates/tienda/base.html
+++ b/tienda/templates/tienda/base.html
@@ -13,11 +13,11 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link" href="{% url 'listado' %}">Admin Productos</a></li>
                 {% if user.is_staff %}
-                    
+                <li class="nav-item"><a class="nav-link" href="{% url 'informe_ventas' %}">Informe de Ventas</a></li>
                 {% endif %}
 
             {% if user.is_authenticated %}
-                <li class="nav-item"><span class="nav-link">Usuario: {{ user.username }}</span></li>
+                <li class="nav-item"><span class="nav-link">Usuario: <a href="{% url 'perfil_detalle' %}">{{ user.username }}</a></span></li>
                 <li class="nav-item">
                     <form method="post" action="{% url 'logout' %}" class="d-flex">
                         {% csrf_token %}
